[project]
name = "coding-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.32.0",
]
